fixed tabs, added button

--- a/games.html
+++ b/games.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hunter's Site</title>
+    <title>Games</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="games.css" />
   </head>
@@ -17,10 +17,11 @@
             </div>
           </div>
           <div class="tab-bar">
-            <a href="/index.html" class="games-tab tab">Home</a>
+            <a href="/index.html" class="tab">Home</a>
             <a href="/projects.html" class="tab">Projects</a>
-            <a href="/bio.html" class="bio tab">Bio</a>
-            <a href="/references.html" class="references tab">References</a>
+            <a href="/bio.html" class="tab">Bio</a>
+            <a href="/games.html" class="tab active">Games</a>
+            <a href="/references.html" class="tab">References</a>
           </div>
         </div>
         <div class="content">
@@ -44,6 +45,9 @@
               For now, we have our dinky, yet charming, 'Fergusons Plight'
             </div>
           </div>
+          <a href="https://fergusonsplight.hunter.osmun.net" class="btn"
+            >Ferguson's Plight</a
+          >
         </div>
       </main>
     </div>
