--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hunter's Site</title>
+    <title>Home</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -12,15 +12,15 @@
         <div class="top-box">
           <div class="title">
             <div>
-              <h1>Welcome to My Practice Webpage</h1>
+              <h1>Hunter Osmun</h1>
             </div>
           </div>
           <div class="tab-bar">
             <a href="/index.html" class="tab active">Home</a>
             <a href="/projects.html" class="tab">Projects</a>
-            <a href="/bio.html" class="bio tab">Bio</a>
-            <a href="/games.html" class="games-tab tab">Games</a>
-            <a href="/references.html" class="references tab">References</a>
+            <a href="/bio.html" class="tab">Bio</a>
+            <a href="/games.html" class="tab">Games</a>
+            <a href="/references.html" class="tab">References</a>
           </div>
         </div>
         <div class="content">
