--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hunter's Site</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="projects.css" />
   </head>
@@ -18,9 +18,10 @@
           </div>
           <div class="tab-bar">
             <a href="/index.html" class="tab">Home</a>
-            <a href="/bio.html" class="bio tab">Bio</a>
-            <a href="/games.html" class="games-tab tab">Games</a>
-            <a href="/references.html" class="references tab">References</a>
+            <a href="/projects.html" class="tab active">Projects</a>
+            <a href="/bio.html" class="tab">Bio</a>
+            <a href="/games.html" class="tab">Games</a>
+            <a href="/references.html" class="tab">References</a>
           </div>
         </div>
         <div class="content">
