fixed game button

--- a/games.html
+++ b/games.html
@@ -44,10 +44,12 @@
               together, so one day there will be a real game we made together!
               For now, we have our dinky, yet charming, 'Fergusons Plight'
             </div>
+            <a
+              href="https://fergusonsplight.hunter.osmun.net"
+              class="btn in-box"
+              >Ferguson's Plight</a
+            >
           </div>
-          <a href="https://fergusonsplight.hunter.osmun.net" class="btn"
-            >Ferguson's Plight</a
-          >
         </div>
       </main>
     </div>
